# espressif_lvgl_emmc

./: .gitignore  sdkconfig  sdkconfig.old
components/Driver_Battery_4i3/: CMakeLists.txt  Driver_Battery_4i3.c  Driver_Battery_4i3.h
components/Driver_Battery_4i3/Buzzer/: Buzzer.c  Buzzer.h
components/Driver_Battery_4i3/Key/: Key.c  Key.h
components/Driver_Battery_4i3/LCD_ILI9806/: LCD_ILI9806.c  LCD_ILI9806.h
components/Driver_Battery_4i3/SNTP/: SNTP.c  SNTP.h
components/Driver_Battery_4i3/Timer/: TimerApp.c  TimerApp.h
components/Driver_Battery_4i3/USB_Serial/: usb_serial.c
components/Driver_Battery_4i3/USB_Serial/include/: usb_serial.h
components/Driver_Battery_4i3/eMMC/: emmc.c  emmc.h
components/Test_Benchmark_FATFS/: CMakeLists.txt  test_benchmark_fatfs.c  test_benchmark_fatfs.h
components/espressif__esp_tinyusb/: tusb_msc_storage.c
components/lvgl/src/hal/: lv_hal_indev.h
main/: CMakeLists.txt  function_test.c  tusb_msc_main.c
